# claude-chats-and-analytics-viewer

./: .coderabbit.yaml  .gitignore  DASHBOARD-PLAN.md  DOCS.md  LICENSE  README.md  install.ps1  install.sh  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  publish.yml
claude_conversation_viewer/: __init__.py  cache.py  classifier.py  cli.py  parser.py  pricing.py  store.py  update_checker.py  web.py
claude_conversation_viewer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
claude_conversation_viewer/dashboard/: __init__.py  aggregator.py  compare.py  export.py  optimize.py  period.py  plans.py  yield_tracker.py
tests/: test_dashboard.py  test_version.py  test_web.py
