[metadata]
name = claude-chats-and-analytics-viewer
version = 2.0.0
description = Browse, search, and resume your Claude Code conversations -- from the browser or the terminal.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Ansh Singh Rajput
author_email = anshgandharva.dev@gmail.com
url = https://github.com/AnshRajput/claude-chats-and-analytics-viewer
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
include = claude_conversation_viewer*

[options.entry_points]
console_scripts =
    claude-conversations = claude_conversation_viewer.web:main
    claude-conversations-cli = claude_conversation_viewer.cli:main
    claude-dashboard = claude_conversation_viewer.web:main
    ccv = claude_conversation_viewer.web:main
